valobj/tests/ui/attributes/unknown_attribute_test.rs
#[valobj::value_object(Validates)]
pub struct UserId(u64);

fn main() {}
